[gd_scene load_steps=25 format=2]

[ext_resource path="res://Prefabs/hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/AngryPig/Idle (36x30).png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/AngryPig/Hit 1 (36x30).png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/AngryPig/Walk (36x30).png" type="Texture" id=4]
[ext_resource path="res://Scripts/Boss.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/minimize_001.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Other/Dust Particle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/AngryPig/Run (36x30).png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/AngryPig/Hit 2 (36x30).png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.8, 11 )

[sub_resource type="Animation" id=6]
resource_name = "angryRun"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dieFx:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.522124, 1 )
colors = PoolColorArray( 0.514648, 0.510628, 0.510628, 1, 1, 0.988235, 0.988235, 1, 1, 1, 1, 0.266667 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=14]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0134615, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.967308, 200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.43865 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 5.0
emission_ring_height = 100.0
emission_ring_axis = Vector3( 1, 0, 0 )
flag_disable_z = true
spread = 59.59
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 66.82
linear_accel_random = 0.26
linear_accel_curve = SubResource( 15 )
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 13.8, 14.6 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 50.8, 9.8 )

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 0, -37 )
scale = Vector2( 2.5, 2.5 )
collision_layer = 2
collision_mask = 41
script = ExtResource( 5 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 8 )
hframes = 12

[node name="ground" type="RayCast2D" parent="texture"]
enabled = true
cast_to = Vector2( 0, 19.2 )
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -5.00679e-07, 3.8 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/angryRun = SubResource( 6 )
anims/die = SubResource( 7 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 5 )

[node name="hitbox" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.4, -11.6 )

[node name="collision" parent="hitbox" index="0"]
position = Vector2( 0.2, 1.2 )
scale = Vector2( 1, 1 )

[node name="ray_wall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -22, 0 )
collision_mask = 8

[node name="hitFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
max_distance = 1e+06
attenuation = 1e-05

[node name="dieFx" type="Particles2D" parent="."]
emitting = false
amount = 24
one_shot = true
speed_scale = 3.0
explosiveness = 0.12
randomness = 0.2
process_material = SubResource( 12 )
texture = ExtResource( 7 )

[node name="invecible" type="Timer" parent="."]
one_shot = true

[node name="walk" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 33

[node name="wall" type="CollisionShape2D" parent="walk"]
modulate = Color( 0.407843, 0.913725, 0.027451, 1 )
position = Vector2( -0.199999, 0.6 )
scale = Vector2( 1, 1 )
shape = SubResource( 13 )
disabled = true

[node name="Attack" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="AT" type="CollisionShape2D" parent="Attack"]
position = Vector2( -7.62939e-07, 11.4 )
scale = Vector2( 1, 1 )
shape = SubResource( 16 )
disabled = true

[node name="AttackFx" type="Particles2D" parent="Attack"]
position = Vector2( 4.76837e-07, 14.4 )
scale = Vector2( 1, 1 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 0.83
randomness = 0.26
process_material = SubResource( 12 )
texture = ExtResource( 7 )

[node name="Flip" type="RayCast2D" parent="Attack"]
position = Vector2( -0.4, 10 )
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( -16, 0 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="invecible" to="." method="_on_invecible_timeout"]

[editable path="hitbox"]
